more burne.conf

--- a/burne.config
+++ b/burne.config
@@ -1,26 +1,26 @@
 Final Fight Guy;Final Fight Guy (U).zip
-kof99p;kof99p.zip
-Super Mario World (U);Super Mario World (U).zip
+Final Fight 3;Final Fight 3 (U).zip
+Super Mario World;Super Mario World (U).zip
 1944;1944.zip
-kof99nd;kof99nd.zip
-Tetris 2 (E);Tetris 2 (E).zip
-kof2000;kof2000.zip
-garou;garou.zip
-Mortal Kombat II;mk2.zip
-rbffspec;rbffspec.zip
 kof99;kof99.zip
+kof99p;kof99p.zip
+kof99nd;kof99nd.zip
+kof2000;kof2000.zip
+Tetris 2;Tetris 2 (E).zip
+Garou Mark of the Wolves;garou.zip
+Mortal Kombat 2;mk2.zip
+rbffspec;rbffspec.zip
 mvsc;mvsc.zip
 samsho4;samsho4.zip
-Final Fight 3 (U);Final Fight 3 (U).zip
 samsho5b;samsho5b.zip
-lastbld2;lastbld2.zip
+Last Blade 2;lastbld2.zip
 macsbios;macsbios.zip
-magdrop2;magdrop2.zip
+Magical Drop 2;magdrop2.zip
 cpzn2;cpzn2.zip
 konamigx;konamigx.zip
-Super Bomberman 2 (U);Super Bomberman 2 (U).zip
-pbobbl3u;pbobbl3u.zip
-puyopuy2;puyopuy2.zip
+Super Bomberman 2;Super Bomberman 2 (U).zip
+Puzzle Bubble 3;pbobbl3u.zip
+Puyo Puyo 2;puyopuy2.zip
 shocktro;shocktro.zip
 Final Fight 2 (U);Final Fight 2 (U).zip
 megaplay;megaplay.zip
