removed invalid character and using bounding box

--- a/burne.config
+++ b/burne.config
@@ -22,7 +22,7 @@ Super Bomberman 2;Super Bomberman 2 (U).zip
 Puzzle Bubble 3;pbobbl3u.zip
 Puyo Puyo 2;puyopuy2.zip
 shocktro;shocktro.zip
-Final Fight 2 (U);Final Fight 2 (U).zip
+Final Fight 2;Final Fight 2 (U).zip
 megaplay;megaplay.zip
 nss;nss.zip
 mpnjx;mpnjx.zip
@@ -30,8 +30,8 @@ ddragon2;ddragon2.zip
 atarisy1;atarisy1.zip
 kof98k;kof98k.zip
 shocktr2;shocktr2.zip
-sknsa1.rar;sknsa1.rar
-Super Mario All Stars (U);Super Mario All Stars (U).zip
+sknsa1;sknsa1.rar
+Super Mario All Stars;Super Mario All Stars (U).zip
 kof98a;kof98a.zip
 skns;skns.zip
 kof2001;kof2001.zip
@@ -44,22 +44,22 @@ cvs;cvs.zip
 mslug5nd;mslug5nd.zip
 samsho2;samsho2.zip
 hng64;hng64.zip
-Super Off Road (U);Super Off Road (U).zip
+Super Off Road;Super Off Road (U).zip
 samsho3a;samsho3a.zip
 kof99n;kof99n.zip
 atluspsx;atluspsx.zip
-Tetris (U);Tetris (U).zip
-Super Mario Kart (U);Super Mario Kart (U).zip
+Tetris;Tetris (U).zip
+Super Mario Kart;Super Mario Kart (U).zip
 mslug2;mslug2.zip
 samsho5bf;samsho5bf.zip
-icro Machines 2 - Turbo Tournament (E);Micro Machines 2 - Turbo Tournament (E).zip
+Micro Machines 2;Micro Machines 2 - Turbo Tournament (E).zip
 kof98;kof98.zip
 kof2000n;kof2000n.zip
 taitofx1;taitofx1.zip
-Contra III - The Alien Wars (U);Contra III - The Alien Wars (U).zip
+Contra 3;Contra III - The Alien Wars (U).zip
 samsho3;samsho3.zip
 mk;mk.zip
-ar_bios;ar_bios.zip
+arbios;ar_bios.zip
 ssf2;ssf2.zip
 pbobbl3j;pbobbl3j.zip
 tps;tps.zip
@@ -68,14 +68,14 @@ decocass;decocass.zip
 samsho;samsho.zip
 Metal Slug 4;mslug4.zip
 1941;1941.zip
-sknse1.rar;sknse1.rar
+sknse1;sknse1.rar
 magdrop3;magdrop3.zip
 ddragon;ddragon.zip
 konamigv;konamigv.zip
 kof2002;kof2002.zip
 1945kiii;1945kiii.zip
-Final Fight (U);Final Fight (U).zip
-kof98 (copie);kof98 (copie).zip
+Final Fight;Final Fight (U).zip
+kof98;kof98 (copie).zip
 samsh5nd;samsh5nd.zip
 atpsx;atpsx.zip
 kof2001h;kof2001h.zip
@@ -95,7 +95,7 @@ pgm;pgm.zip
 cpzn1;cpzn1.zip
 Metal Slug;mslug.zip
 19xx;19xx.zip
-Super Mario All Stars & World (U);Super Mario All Stars & World (U).zip
-Micro Machines (U);Micro Machines (U).zip
+Super Mario All Stars and World;Super Mario All Stars & World (U).zip
+Micro Machines;Micro Machines (U).zip
 Super Castlevania IV;Super Castlevania IV (U).zip
 King of Fighters 98;kof98n.zip
