modif burne config

--- a/burne.config
+++ b/burne.config
@@ -1,14 +1,14 @@
 Final Fight Guy;Final Fight Guy (U).zip
-kof99p;kof99p.zip
-Super Mario World (U);Super Mario World (U).zip
+King Of Fighters 99P;King Of Fighters 99p.zip
+Super Mario World;Super Mario World (U).zip
 1944;1944.zip
-kof99nd;kof99nd.zip
-Tetris 2 (E);Tetris 2 (E).zip
-kof2000;kof2000.zip
+King Of Fighters 99ND;King Of Fighters 99nd.zip
+Tetris 2 ;Tetris 2 (E).zip
+King Of Fighters 2000;kof2000.zip
 garou;garou.zip
-Mortal Kombat II;mk2.zip
+Mortal Kombat II;Mortal Kombat 2.zip
 rbffspec;rbffspec.zip
-kof99;kof99.zip
+King Of Fighters 99;kof99.zip
 mvsc;mvsc.zip
 samsho4;samsho4.zip
 Final Fight 3 (U);Final Fight 3 (U).zip
@@ -27,38 +27,37 @@ megaplay;megaplay.zip
 nss;nss.zip
 mpnjx;mpnjx.zip
 ddragon2;ddragon2.zip
-atarisy1;atarisy1.zip
-kof98k;kof98k.zip
+King Of Fighters 98k;kof98k.zip
 shocktr2;shocktr2.zip
 sknsa1.rar;sknsa1.rar
 Super Mario All Stars (U);Super Mario All Stars (U).zip
-kof98a;kof98a.zip
+King Of Fighters 98a;kof98a.zip
 skns;skns.zip
-kof2001;kof2001.zip
+King Of Fighters 2001;kof2001.zip
 psarc95;psarc95.zip
-kof99e;kof99e.zip
-kof99a;kof99a.zip
-mslug4b;mslug4b.zip
-mslug5a;mslug5a.zip
+King Of Fighters 99e;kof99e.zip
+King Of Fighters 99a;kof99a.zip
+Metal Slug 4b;mslug4b.zip
+Metal Slug 5a;mslug5a.zip
 cvs;cvs.zip
-mslug5nd;mslug5nd.zip
+Metal Slug 5nd;mslug5nd.zip
 samsho2;samsho2.zip
 hng64;hng64.zip
 Super Off Road (U);Super Off Road (U).zip
 samsho3a;samsho3a.zip
-kof99n;kof99n.zip
+King Of Fighters 99n;kof99n.zip
 atluspsx;atluspsx.zip
 Tetris (U);Tetris (U).zip
 Super Mario Kart (U);Super Mario Kart (U).zip
-mslug2;mslug2.zip
+Metal Slug 2;mslug2.zip
 samsho5bf;samsho5bf.zip
-icro Machines 2 - Turbo Tournament (E);Micro Machines 2 - Turbo Tournament (E).zip
-kof98;kof98.zip
-kof2000n;kof2000n.zip
+Micro Machines 2 - Turbo Tournament (E);Micro Machines 2 - Turbo Tournament (E).zip
+King Of Fighters 98;kof98.zip
+King Of Fighters 2000n;kof2000n.zip
 taitofx1;taitofx1.zip
 Contra III - The Alien Wars (U);Contra III - The Alien Wars (U).zip
 samsho3;samsho3.zip
-mk;mk.zip
+Mortal Kombat;mk.zip
 ar_bios;ar_bios.zip
 ssf2;ssf2.zip
 pbobbl3j;pbobbl3j.zip
@@ -66,36 +65,36 @@ tps;tps.zip
 samsho5;samsho5.zip
 decocass;decocass.zip
 samsho;samsho.zip
-Metal Slug 4;mslug4.zip
+Metal Slug 4;Metal Slug 4.zip
 1941;1941.zip
 sknse1.rar;sknse1.rar
 magdrop3;magdrop3.zip
 ddragon;ddragon.zip
 konamigv;konamigv.zip
-kof2002;kof2002.zip
+King Of Fighters 2002;kof2002.zip
 1945kiii;1945kiii.zip
 Final Fight (U);Final Fight (U).zip
-kof98 (copie);kof98 (copie).zip
+King Of Fighters 98 (copie);kof98 (copie).zip
 samsh5nd;samsh5nd.zip
 atpsx;atpsx.zip
-kof2001h;kof2001h.zip
-kof2001b;kof2001b.zip
+King Of Fighters 2001h;kof2001h.zip
+King Of Fighters 2001b;kof2001b.zip
 crysbios;crysbios.zip
-Metal Slug 3;mslug3.zip
+Metal Slug 3;Metal Slug 3.zip
 Last Blade;lastblad.zip
-mk3;mk3.zip
+Mortal Kombat 3;mk3.zip
 megatech;megatech.zip
 playch10;playch10.zip
 naomi2;naomi2.zip
-Metal Slug 5;mslug5.zip
-ffight;ffight.zip
+Metal Slug 5;Metal Slug 5.zip
+Final Fight;ffight.zip
 acpsx;acpsx.zip
 gunlock;gunlock.zip
 pgm;pgm.zip
 cpzn1;cpzn1.zip
-Metal Slug;mslug.zip
+Metal Slug;Metal Slug .zip
 19xx;19xx.zip
 Super Mario All Stars & World (U);Super Mario All Stars & World (U).zip
 Micro Machines (U);Micro Machines (U).zip
 Super Castlevania IV;Super Castlevania IV (U).zip
-King of Fighters 98;kof98n.zip
+King of Fighters 98;King Of Fighters 98n.zip
