corrected rom name

--- a/burne.config
+++ b/burne.config
@@ -65,7 +65,7 @@ tps;tps.zip
 samsho5;samsho5.zip
 decocass;decocass.zip
 samsho;samsho.zip
-Metal Slug 4;Metal Slug 4.zip
+Metal Slug 4;mslug4.zip
 1941;1941.zip
 sknse1;sknse1.rar
 magdrop3;magdrop3.zip
@@ -74,27 +74,26 @@ konamigv;konamigv.zip
 King Of Fighters 2002;kof2002.zip
 1945kiii;1945kiii.zip
 Final Fight;Final Fight (U).zip
-kof98;kof98 (copie).zip
 samsh5nd;samsh5nd.zip
 atpsx;atpsx.zip
 King Of Fighters 2001h;kof2001h.zip
 King Of Fighters 2001b;kof2001b.zip
 crysbios;crysbios.zip
-Metal Slug 3;Metal Slug 3.zip
+Metal Slug 3;mslug3.zip
 Last Blade;lastblad.zip
 Mortal Kombat 3;mk3.zip
 megatech;megatech.zip
 playch10;playch10.zip
 naomi2;naomi2.zip
-Metal Slug 5;Metal Slug 5.zip
+Metal Slug 5;mslug5.zip
 Final Fight;ffight.zip
 acpsx;acpsx.zip
 gunlock;gunlock.zip
 pgm;pgm.zip
 cpzn1;cpzn1.zip
-Metal Slug;Metal Slug .zip
+Metal Slug;mslug.zip
 19xx;19xx.zip
 Super Mario All Stars and World;Super Mario All Stars & World (U).zip
 Micro Machines;Micro Machines (U).zip
 Super Castlevania IV;Super Castlevania IV (U).zip
-King of Fighters 98;King Of Fighters 98n.zip
+King of Fighters 98;kof98n.zip
