--- a/good.config
+++ b/good.config
@@ -1,11 +1,17 @@
 Magical Drop 2;sdlmame;magdrop2
+Magical Drop 3;sdlmame;magdrop3
 1944;sdlmame;1944
+19xx;sdlmame;19xx
+1945k 3;sdlmame;1945kiii
+Shock Troopers;sdlmame;shocktro
+Gunlock;sdlmame;gunlock
+Double Dragon;sdlmame;ddragon
+Double Dragon 2;sdlmame;ddragon2
+Puyo Puyo 2;sdlmame;puyopuy2
+Street Fighter 2;sdlmame;ssf2
+Samourai Showdown 2;sdlmame;samsho2
+Garou;sdlmame;garou
+Last Blade 2;sdlmame;lastbld2
 King Of Fighters 98;sdlmame;kof98
 Mortal Combat 2;sdlmame;mk2
 Real Bout Fatal Fury;sdlmame;rbffspec
-Shock Troopers;sdlmame;shocktro
-Garou;sdlmame;garou
-Last Blade 2;sdlmame;lastbld2
-Gunlock;sdlmame;gunlock
-Double Dragon;sdlmame;ddragon
-Puyo Puyo 2;sdlmame;puyopuy2
