--- a/good.config
+++ b/good.config
@@ -1,15 +1,23 @@
+Puzzle Bobble 3;sdlmame;pbobble3
 Magical Drop 2;sdlmame;magdrop2
 Magical Drop 3;sdlmame;magdrop3
+Puyo Puyo 2;sdlmame;puyopuy2
 1944;sdlmame;1944
 19xx;sdlmame;19xx
 1945k 3;sdlmame;1945kiii
-Shock Troopers;sdlmame;shocktro
 Gunlock;sdlmame;gunlock
+Last Resort;sdlmame;lresort
+Metal Slug;sdlmame;mslug
+Metal Slug 2;sdlmame;mslug2
+Metal Slug 3;sdlmame;mslug3
+Shock Troopers;sdlmame;shocktro
+Shock Troopers 2;sdlmame;shocktr2
 Double Dragon;sdlmame;ddragon
 Double Dragon 2;sdlmame;ddragon2
-Puyo Puyo 2;sdlmame;puyopuy2
+Alien Versus Predator;sdlmame;avsp
 Street Fighter 2;sdlmame;ssf2
 Samourai Showdown 2;sdlmame;samsho2
+Samourai Showdown 4;sdlmame;samsho4
 Garou;sdlmame;garou
 Last Blade 2;sdlmame;lastbld2
 King Of Fighters 98;sdlmame;kof98
