--- a/good.config
+++ b/good.config
@@ -6,10 +6,12 @@ Puyo Puyo 2;sdlmame;puyopuy2
 19xx;sdlmame;19xx
 1945k 3;sdlmame;1945kiii
 Gunlock;sdlmame;gunlock
+Progear;sdlmame;progear
 Last Resort;sdlmame;lresort
 Metal Slug;sdlmame;mslug
 Metal Slug 2;sdlmame;mslug2
 Metal Slug 3;sdlmame;mslug3
+Powered Gear;sdlmame;pgear
 Shock Troopers;sdlmame;shocktro
 Shock Troopers 2;sdlmame;shocktr2
 Double Dragon;sdlmame;ddragon
