--- a/good.config
+++ b/good.config
@@ -7,6 +7,7 @@ Puyo Puyo 2;sdlmame;puyopuy2
 1945k 3;sdlmame;1945kiii
 Gunlock;sdlmame;gunlock
 Progear;sdlmame;progear
+Gigawing;sdlmame;gigawing
 Last Resort;sdlmame;lresort
 Metal Slug;sdlmame;mslug
 Metal Slug 2;sdlmame;mslug2
@@ -22,6 +23,7 @@ Samourai Showdown 2;sdlmame;samsho2
 Samourai Showdown 4;sdlmame;samsho4
 Garou;sdlmame;garou
 Last Blade 2;sdlmame;lastbld2
+SNK vs Capcom;sdlmame;svcpcb
 King Of Fighters 98;sdlmame;kof98
 Mortal Combat 2;sdlmame;mk2
 Real Bout Fatal Fury;sdlmame;rbffspec
