--- a/good.config
+++ b/good.config
@@ -27,3 +27,22 @@ SNK vs Capcom;sdlmame;svcpcb
 King Of Fighters 98;sdlmame;kof98
 Mortal Combat 2;sdlmame;mk2
 Real Bout Fatal Fury;sdlmame;rbffspec
+Pac-man Plus;sdlmame;pacplus
+Ms Pac-man;sdlmame;mspacman
+Xevious;sdlmame;xevious
+Parodius DA!;sdlmame;parodius
+DoDonPachi;sdlmame;ddonpach
+DoDonPachi Dai-Ou-Jou;sdlmame;ddpdoj
+Radiant Silvergun;sdlmame;rsgun
+Donkey Kong;sdlmame;dkong
+Donkey Kong Jr;sdlmame;dkongjr
+Paperboy;sdlmame;paperboy
+Q*bert;sdlmame;qbert
+Marble Madness;sdlmame;marble
+Arkanoid - Revenge of DOH;sdlmame;arknoid
+Frogger;sdlmame;frogger
+Scramble;sdlmame;scramble
+Sonic The Hedgehog;sdlmame;mp_sonic
+Sonic The Hedgehog 2;sdlmame;mp_soni2
+Streets Of Rage II;sdlmame;mp_sor2
+Bomberman;sdlmame;bombrman
