removed not working

--- a/good.config
+++ b/good.config
@@ -36,13 +36,11 @@ DoDonPachi Dai-Ou-Jou;sdlmame;ddpdoj
 Radiant Silvergun;sdlmame;rsgun
 Donkey Kong;sdlmame;dkong
 Donkey Kong Jr;sdlmame;dkongjr
-Paperboy;sdlmame;paperboy
 Q*bert;sdlmame;qbert
-Marble Madness;sdlmame;marble
-Arkanoid - Revenge of DOH;sdlmame;arknoid
+Arkanoid;sdlmame;arknoid
 Frogger;sdlmame;frogger
 Scramble;sdlmame;scramble
-Sonic The Hedgehog;sdlmame;mp_sonic
-Sonic The Hedgehog 2;sdlmame;mp_soni2
+Sonic;sdlmame;mp_sonic
+Sonic 2;sdlmame;mp_soni2
 Streets Of Rage II;sdlmame;mp_sor2
 Bomberman;sdlmame;bombrman
