--- a/good.config
+++ b/good.config
@@ -27,16 +27,15 @@ SNK vs Capcom;sdlmame;svcpcb
 King Of Fighters 98;sdlmame;kof98
 Mortal Combat 2;sdlmame;mk2
 Real Bout Fatal Fury;sdlmame;rbffspec
-Pac-man Plus;sdlmame;pacplus
-Ms Pac-man;sdlmame;mspacman
-Xevious;sdlmame;xevious
-Parodius DA!;sdlmame;parodius
+Pacman Plus;sdlmame;pacplus
+Ms Pacman;sdlmame;mspacman
+Parodius DA;sdlmame;parodius
 DoDonPachi;sdlmame;ddonpach
-DoDonPachi Dai-Ou-Jou;sdlmame;ddpdoj
+DoDonPachi DaiOuJou;sdlmame;ddpdoj
 Radiant Silvergun;sdlmame;rsgun
 Donkey Kong;sdlmame;dkong
 Donkey Kong Jr;sdlmame;dkongjr
-Q*bert;sdlmame;qbert
+Qbert;sdlmame;qbert
 Arkanoid;sdlmame;arknoid
 Frogger;sdlmame;frogger
 Scramble;sdlmame;scramble
