--- a/good.config
+++ b/good.config
@@ -36,7 +36,7 @@ Radiant Silvergun;sdlmame;rsgun
 Donkey Kong;sdlmame;dkong
 Donkey Kong Jr;sdlmame;dkongjr
 Qbert;sdlmame;qbert
-Arkanoid;sdlmame;arknoid
+Arkanoid;sdlmame;arknoid2
 Frogger;sdlmame;frogger
 Scramble;sdlmame;scramble
 Sonic;sdlmame;mp_sonic
