test before kill

--- a/good.config
+++ b/good.config
@@ -41,3 +41,8 @@ Sonic;sdlmame;mp_sonic
 Sonic 2;sdlmame;mp_soni2
 Streets Of Rage II;sdlmame;mp_sor2
 Bomberman;sdlmame;bombrman
+Elevator Action Return;sdlmame;elvact2u
+Battle Garegga;sdlmame;bgaregga
+Darius Gaiden;sdlmame;dariusg
+Super Meat Boy;exec;supermeatboy/SuperMeatBoy
+Jamestown;exec;jamestown/Jamestown
