--- a/good.config
+++ b/good.config
@@ -44,3 +44,6 @@ Bomberman;sdlmame;bombrman
 Elevator Action Return;sdlmame;elvact2u
 Battle Garegga;sdlmame;bgaregga
 Darius Gaiden;sdlmame;dariusg
+Shadow Dancer;sdlmame;shdancer
+Golden Axe;sdlmame;goldnaxe
+Altered Beast;sdlmame;altbeast
