--- a/good.config
+++ b/good.config
@@ -47,3 +47,6 @@ Darius Gaiden;sdlmame;dariusg
 Shadow Dancer;sdlmame;shdancer
 Golden Axe;sdlmame;goldnaxe
 Altered Beast;sdlmame;altbeast
+Tetris;sdlmame;atetris
+Dinosaurs and Cadillacs;sdlmame;dino
+Kid Chameleon;sdlmame;mt_kcham
